--- a/datacenter-project/#src/about.html
+++ b/datacenter-project/#src/about.html
@@ -12,10 +12,10 @@
     <div class="wrapper page-wrapper">
         @@include('./pages/layout/_header.html')
         <main class="main">
-            @@include('_about-us.html')
-            @@include('./pages/main-page/_advantages.html')
+            @@include('./pages/company/about/_about-us.html')
+            @@include('./pages/main/_advantages.html')
 <!--            @@include('_partners.html')-->
-            @@include('_about-datacenter.html')
+            @@include('./pages/company/about/_about-datacenter.html')
         </main>
         @@include('./pages/layout/_footer.html')
         @@include('./pages/layout/_footer-mob.html')
