--- a/datacenter-project/#src/index.html
+++ b/datacenter-project/#src/index.html
@@ -14,13 +14,13 @@
     <div class="wrapper page-wrapper">
         @@include('./pages/layout/_header.html')
         <main class="main">
-            @@include('./pages/main-page/_promo.html')
-            @@include('./pages/main-page/_all-services.html')
-            @@include('./pages/main-page/_about.html')
-            @@include('./pages/main-page/_advantages.html')
+            @@include('./pages/main/_promo.html')
+            @@include('./pages/main/_all-services.html')
+            @@include('./pages/main/_about.html')
+            @@include('./pages/main/_advantages.html')
 <!--            @@include('_partners.html')-->
-            @@include('./pages/main-page/_review.html')
-            @@include('./pages/main-page/_offer.html')
+            @@include('./pages/main/_review.html')
+            @@include('./pages/main/_offer.html')
         </main>
         @@include('./pages/layout/_footer.html')
         @@include('./pages/layout/_footer-mob.html')
