--- a/datacenter-project/#src/map.html
+++ b/datacenter-project/#src/map.html
@@ -13,48 +13,10 @@
 <body>
 
     <div class="wrapper page-wrapper">
-
-
-        @@include('./pages/layout/_header.html');
+        @@include('./pages/layout/_header.html')
         <main class="main">
-            <section class="map-section section-padding">
-                <div class="container">
-                    <h1 class="title-section">Схема проезда</h1>
-                    <h2 class="map-subtitle">Колхозная улица 2б, Минск, Беларусь. Офис ООО "Датахата"</h2>
-                    <div class="map-section-container">
-                        <div class="map-container-item">
-                            <h3>Схема проезда к нашему офису</h3>
-                            <div class="map_container container-fluid">
-                                <div class="map">
-                                    <script class="ymap_lazy" async
-                                        data-src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A951ab65053310986ac97b09f23016f6fa7f12f14235359b3743655eb5d8bb2c2&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&&amp;scroll=true"></script>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="map-container-item">
-                            <h3>Как попасть в дата-центр через проходную завода (пешком)</h3>
-                            <div class="map_container container-fluid-two">
-                                <div class="map">
-                                    <script class="ymap_lazy" async
-                                        data-src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adbcf7b76660f296a6ab95aa6b10ba4e772cff349978c3be4fd08d946be03ee78&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=true"></script>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="map-container-item">
-                            <h3>Как попасть в дата-центр через транспортную проходную (на автомобиле)</h3>
-                            <div class="map_container container-fluid-three">
-                                <div class="map">
-                                    <script class="ymap_lazy" async
-                                        data-src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abfd54c0ddeb3d5e73e9b0ff64a54d0041dc8d30c0d919f899087c1a032724871&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=true"></script>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            @@include('./pages/company/map/_map.html')
         </main>
-
-
          @@include('./pages/layout/_footer.html')
           @@include('./pages/layout/_footer-mob.html')
 
