refactor: refactor contacts page, footer-mob

--- a/datacenter-project/#src/contacts.html
+++ b/datacenter-project/#src/contacts.html
@@ -12,11 +12,11 @@
 
 <body>
     <div class="wrapper page-wrapper">
-        @@include('./pages/layout/_header.html')
+        @@include('./components/layout/_header.html')
         <main class="main">
-            @@include('_contacts.html')
+            @@include('./components/company/contacts/_contacts.html')
         </main>
-         @@include('./pages/layout/_footer.html')
+         @@include('./components/layout/_footer.html')
     </div>
 
 
