--- a/datacenter-project/#src/index.html
+++ b/datacenter-project/#src/index.html
@@ -12,18 +12,18 @@
 
 <body>
     <div class="wrapper page-wrapper">
-        @@include('./pages/layout/_header.html')
+        @@include('./components/layout/_header.html')
         <main class="main">
-            @@include('./pages/main/_promo.html')
-            @@include('./pages/main/_all-services.html')
-            @@include('./pages/main/_about.html')
-            @@include('./pages/main/_advantages.html')
+            @@include('./components/main/_promo.html')
+            @@include('./components/main/_all-services.html')
+            @@include('./components/main/_about.html')
+            @@include('./components/main/_advantages.html')
 <!--            @@include('_partners.html')-->
-            @@include('./pages/main/_review.html')
-            @@include('./pages/main/_offer.html')
+            @@include('./components/main/_review.html')
+            @@include('./components/main/_offer.html')
         </main>
-        @@include('./pages/layout/_footer.html')
-        @@include('./pages/layout/_footer-mob.html')
+        @@include('./components/layout/_footer.html')
+        @@include('./components/layout/_footer-mob.html')
     </div>
 
     <script src="js/swiped-events.min.js"></script>
