refactor: get cost of colo service from table and create obj

--- a/datacenter-project/#src/tower.html
+++ b/datacenter-project/#src/tower.html
@@ -32,15 +32,15 @@
                                         <div class="table-body-item">
                                             <p>Размещение сервера (в tower исполнении) в шкафу, с блоком питания
                                                 мощностью до 250 Вт</p>
-                                            <p id="costTower">144,00</p>
+                                            <p data-name="tower" id="costTower">144,00</p>
                                         </div>
                                         <div class="table-body-item">
                                             <p>Каждые последующие 50 Вт мощности блока питания</p>
-                                            <p id="costPower"> 9,60</p>
+                                            <p data-name="power" id="costPower"> 9,60</p>
                                         </div>
                                         <div class="table-body-item">
                                             <p>Подключение второго блока питания</p>
-                                            <p id="costSupply">26,40</p>
+                                            <p data-name="supply" id="costSupply">26,40</p>
                                         </div>
                                     </div>
                                 </div>
@@ -70,7 +70,7 @@
                                         <div class="table-body">
                                             <div class="table-body-item">
                                                 <p>Дополнительный порт 1 Gb/s</p>
-                                                <p id="costPort">12,00</p>
+                                                <p data-name="port" id="costPort">12,00</p>
                                             </div>
                                             <div class="table-body-item">
                                                 <p>Дополнительный порт 10 Gb/s</p>
@@ -78,7 +78,7 @@
                                             </div>
                                             <div class="table-body-item">
                                                 <p>Дополнительный адрес IPv4</p>
-                                                <p id="costIp">10,20</p>
+                                                <p data-name="ip" id="costIp">10,20</p>
                                             </div>
                                             <div class="table-body-item">
                                                 <p>Дополнительный адрес IPv6 (/64)</p>
