--- a/datacenter-project/#src/unit.html
+++ b/datacenter-project/#src/unit.html
@@ -25,30 +25,9 @@
                                     телекоммуникационное оборудование
                                     в собственном дата-центре, оборудованном всем необходимым для обеспечения
                                     бесперебойной работы.</p>
-                                <div class="services-table">
-                                    <div class="table-head">
-                                        <p>Наименование продукта</p>
-                                        <p>Стоимость BYN с НДС, в месяц</p>
-                                    </div>
-                                    <div class="table-body">
-                                        <div class="table-body-item">
-                                            <p>Размещение сервера 1U, с блоком питания до 250 Вт</p>
-                                            <p id="costServer">114,00</p>
-                                        </div>
-                                        <div class="table-body-item">
-                                            <p>Каждые последующие 50 Вт мощности блока питания</p>
-                                            <p id="costPower">9,60</p>
-                                        </div>
-                                        <div class="table-body-item">
-                                            <p>Каждый дополнительный юнит</p>
-                                            <p id="costUnit">57,00</p>
-                                        </div>
-                                        <div class="table-body-item">
-                                            <p>Подключение второго блока питания</p>
-                                            <p id="costSupply">26,40</p>
-                                        </div>
-                                    </div>
-                                </div>
+
+                                    @@include('components/services/colo/unit/_unit-table-service.html')
+
                                 <div class="btn-services">
                                     <a class="btn-gr-bg order-btn"
                                         href="https://my.datahata.by/"><span>Заказать</span></a>
@@ -75,7 +54,7 @@
                                         <div class="table-body">
                                             <div class="table-body-item">
                                                 <p>Дополнительный порт 1 Gb/s</p>
-                                                <p id="costPort">12,00</p>
+                                                <p data-name="port" id="costPort">12,00</p>
                                             </div>
                                             <div class="table-body-item">
                                                 <p>Дополнительный порт 10 Gb/s</p>
@@ -83,7 +62,7 @@
                                             </div>
                                             <div class="table-body-item">
                                                 <p>Дополнительный адрес IPv4</p>
-                                                <p id="costIp">10,20</p>
+                                                <p data-name="ip" id="costIp">10,20</p>
                                             </div>
                                             <div class="table-body-item">
                                                 <p>Дополнительный адрес IPv6 (/64)</p>
