refactor: refactor colo page, accordion

--- a/datacenter-project/#src/colocation.html
+++ b/datacenter-project/#src/colocation.html
@@ -15,7 +15,7 @@
     <div class="wrapper page-wrapper">
         @@include('./components/layout/_header.html')
         <main class="main">
-            @@include('_colo.html')
+            @@include('components/services/colo/_colo.html')
         </main>
          @@include('./components/layout/_footer.html')
           @@include('./components/layout/_footer-mob.html')
