refactor: refactor soft pages

--- a/datacenter-project/#src/onlyoffice.html
+++ b/datacenter-project/#src/onlyoffice.html
@@ -16,12 +16,12 @@
 <div class="wrapper page-wrapper">
     @@include('./components/layout/_header.html')
     <main class="main">
-        <section class="services" id="soft-page">
+        <section class="services">
             <div class="container services__container">
-                <h1 class="services__title">Программное обеспечение - ISPsystem</h1>
+                <h1 class="services__title">Программное обеспечение - OnlyOffice</h1>
                 <div class="services__content">
                     <div class="services__wrapper">
-                        @@include('components/services/soft/_isp.html')
+                        @@include('components/services/soft/_only-office.html')
                     </div>
                 </div>
             </div>
@@ -37,3 +37,4 @@
 </body>
 
 </html>
+
